--- a/VS Code/settings.json
+++ b/VS Code/settings.json
@@ -332,6 +332,7 @@
     "terminal.background": "#000",
     "titleBar.activeBackground": "#000",
     "titleBar.inactiveBackground": "#000",
+    "sideBarSectionHeader.border": "#000",
     /* Dracula Theme colors for files on the sidebar (& widgets): */
     "list.hoverBackground": "#44475a75",
     "list.activeSelectionBackground": "#44475a",
