--- a/VS Code/settings.json
+++ b/VS Code/settings.json
@@ -1,5 +1,5 @@
 {
-  //Seta o End of Line Sequence dos arquivos pra LF como padrão para evitar bugs:
+  //Seta o End of Line Sequence dos arquivos pra LF (no Windows) como padrão para evitar bugs:
   "files.eol": "\n",
 
   //Envia a commit assim que eu crio ela, sem confirmar a sincronização:
@@ -8,7 +8,7 @@
   "git.autofetch": true,
 
   //Tema & icon pack que eu uso:
-  "workbench.colorTheme": "Omni Owl",
+  "workbench.colorTheme": "Omni",
   "workbench.iconTheme": "material-icon-theme",
 
   //Configs da minha fonte:
@@ -22,7 +22,7 @@
   //Configs do meu Prettier:
   "prettier.semi": true,
   "prettier.endOfLine": "lf",
-  "prettier.singleQuote": true,
+  "prettier.singleQuote": false,
   "editor.smoothScrolling": true,
   "prettier.trailingComma": "none",
   "editor.defaultFormatter": "esbenp.prettier-vscode",
