Add Cpp/C files clang-format instead of prettier

--- a/VS Code/settings.json
+++ b/VS Code/settings.json
@@ -384,10 +384,18 @@
   "sync.gist": "725dee5efa98edc6b63104d871a1b960",
   "diffEditor.ignoreTrimWhitespace": false,
 
-  /* Configs do compilador de C/C++: */
+  // Configs do compilador de C/C++:
   "c-cpp-compile-run.cpp-flags": " -Wall -Wextra -std=c17",
   /* ☝🏼 std=c17 --> Roda na versão estável mais atual */
   "c-cpp-compile-run.should-show-notifications": false,
   "c-cpp-compile-run.c-compiler": "C:\\Program Files\\TDM-GCC-64\\bin\\gcc",
-  "c-cpp-compile-run.cpp-compiler": "C:\\Program Files\\TDM-GCC-64\\bin\\g++"
+  "c-cpp-compile-run.cpp-compiler": "C:\\Program Files\\TDM-GCC-64\\bin\\g++",
+  /*Format Cpp/C files with the ms extension which already has clang-format installed: 
+  "[c]": {
+    "editor.defaultFormatter": "ms-vscode.cpptools"
+  },
+  "[cpp]": {
+    "editor.defaultFormatter": "ms-vscode.cpptools"
+  },*/
+  "C_Cpp.clang_format_fallbackStyle": "{ BasedOnStyle: Google, IndentWidth: 4, IncludeBlocks: Merge, IndentGotoLabels: true, KeepEmptyLinesAtTheStartOfBlocks: true}"
 }
