Cascadia Code set as default font

--- a/VS Code/settings.json
+++ b/VS Code/settings.json
@@ -12,12 +12,14 @@
   "workbench.iconTheme": "material-icon-theme",
 
   //Configs da minha fonte:
-  "editor.fontFamily": "Jetbrains Mono",
-  "editor.fontSize": 13,
+  "editor.fontFamily": "Cascadia Code",
+  "editor.fontSize": 13.2,
   "editor.fontLigatures": true,
+  //"editor.fontLigatures": "'calt', 'ss01'",
+  //☝🏼 Cascadia Code font italics enabling
   "editor.lineHeight": 1.4,
   "editor.tabSize": 2,
-  "editor.letterSpacing": 0.4,
+  "editor.letterSpacing": 0.5,
   "editor.fontWeight": "normal",
 
   //Configs do meu Prettier:
@@ -84,6 +86,7 @@
     "Bootcamp",
     "browserslist",
     "Btns",
+    "Cascadia",
     "Cataline",
     "CEPs",
     "chakra",
@@ -139,6 +142,7 @@
     "mnsg",
     "mnsgs",
     "mostra",
+    "netflix",
     "nextjs",
     "nlw",
     "node",
