Font changed from Cascadia Code only to Cascadia Code PL - A version build for terminals because have Powerline Symbols built in

--- a/Windows Terminal/settings.json
+++ b/Windows Terminal/settings.json
@@ -35,7 +35,7 @@
     "defaults": {
       "colorScheme": "DraculaCustom-Omni",
       "font": {
-        "face": "Cascadia Code",
+        "face": "Cascadia Code PL",
         "size": 14
       },
       "startingDirectory": "C:\\Users\\Thiago Silva Lopes\\Desktop"
