--- a/VS Code/settings.json
+++ b/VS Code/settings.json
@@ -24,7 +24,7 @@
   "prettier.semi": true,
   "prettier.endOfLine": "lf",
   "editor.formatOnSave": true,
-  "prettier.singleQuote": false,
+  "prettier.singleQuote": true,
   "editor.smoothScrolling": true,
   "prettier.trailingComma": "none",
   "editor.defaultFormatter": "esbenp.prettier-vscode",
@@ -160,6 +160,7 @@
     "paraaaaa",
     "Photoshop",
     "Playstation",
+    "reduxjs",
     "repos",
     "Reseta",
     "respawn",
@@ -180,6 +181,7 @@
     "transpilar",
     "ts",
     "typeorm",
+    "uber",
     "Unfollow",
     "Unicons",
     "UNICONS",
