--- a/Windows Terminal/settings.json
+++ b/Windows Terminal/settings.json
@@ -36,9 +36,9 @@
       "colorScheme": "DraculaCustom-Omni",
       "font": {
         "face": "Cascadia Code PL",
-        "size": 14
+        "size": 13
       },
-      "startingDirectory": "C:\\Users\\Thiago Silva Lopes\\Desktop"
+      "startingDirectory": "C:\\Users\\thiag\\Desktop"
     },
     "list": [
       {
