--- a/VS Code/settings.json
+++ b/VS Code/settings.json
@@ -74,8 +74,8 @@
     "atoms": "components",
     "molecules": "components",
     "organisms": "components",
-    "templates": "components",
-    "pages": "components"
+    "templates": "components"
+    //"pages": "components"
   },
 
   "editor.cursorBlinking": "expand",
@@ -205,6 +205,7 @@
     "semibold",
     "Serializa",
     "swiper",
+    "tailwindcss",
     "thiago",
     "Thiago",
     "thiagoow",
@@ -316,7 +317,7 @@
     }
   },
   "todo-tree.highlights.enabled": true,
-  "todo-tree.filtering.excludeGlobs": ["**/node_modules"],
+  "todo-tree.filtering.excludeGlobs": ["**/node_modules/**"],
   "todo-tree.general.statusBarClickBehaviour": "reveal",
 
   "workbench.colorCustomizations": {
